# http-fingerprint

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
http_fingerprint/: __init__.py  core.py
tests/: test_http_fingerprint.py
